# content

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pre-commit-config_template.yaml  CHANGELOG.md  CODEOWNERS  README.md  demisto.lic  gitlab_slack_notifier.py  pyproject.toml  queries.json  queries_test.json  ruff_stats.txt  start_stop_mechanism.py  start_stop_mechanism_test.py  validation_config.toml  xsiam_servers.json  xsoar_ng_servers.json
.changelogs/:   CIAC-11452.feature.md  +.feature.md  +0051fcd8.misc.md  +029ce938.bugfix.md  +082ec5b4.bugfix.md  +08406c8c.bugfix.md  +08b3ebc0.bugfix.md  +0a005161.bugfix.md  +0ab99167.bugfix.md  +0abe9949.misc.md  +0c7ba689.doc.md  +0eededb1.bugfix.md  +11489.feature.md  +11b8cdfe.bugfix.md  +11d5d872.bugfix.md  +1334eb86.bugfix.md  +133886db.feature.md  +13af59ea.bugfix.md  +1a369e6e.feature.md  +1a94fae4.doc.md  +1d2a1309.doc.md  +1f346816.feature.md  +22cd4649.misc.md  +22f482e1.misc.md  +26bcb261.bugfix.md  +288d3f7d.misc.md  +28f94682.feature.md  +298e6209.feature.md  +29fe59f3.bugfix.md  +2a4f0fa4.bugfix.md  +2ac72f26.bugfix.md  +2ac72f27.feature.md  +2e3af518.bugfix.md  +30d05afb.misc.md  +31430cb0.bugfix.md  +31f17ecc.bugfix.md  +372a2d3f.bugfix.md  +3981effb.removal.md  +39af91b8.bugfix.md  +3a2c063d.bugfix.md  (+234 more)
.github/github_workflow_scripts/: autobump_rn.py
.github/workflows/: autobump_rn.yml
.gitlab/: CODEOWNERS  download_content_branch.sh  graph_lock_machine.py  helper_functions.sh
.gitlab/ci/: .gitlab-ci.force-merge.yml  .gitlab-ci.ship-code-check.yml  .gitlab-ci.yml  blacklist-validation.yml  bucket-logs.yml  build-machines-report.yml  creating-disposable-tenants.yml  daily_build_status.yml  gitlab-ci.shared.variables.yml  global.yml  machines-daily-routine.yml  name_mapping.json  secret-expiration-report.yml  security-scans.yml  server-images-builds.yml  slack-notify.yml  variables.yml  workflow.yml
.hooks/: bootstrap  validate-mdx.js
AMI-build/: Dockerfile
BlacklistValidation/: get_blacklist.py  get_blacklist_test.py  requirements.txt  slack_notifier.py
BucketLogs/: process-logs.sh
BuildMachines/: report.py
BuildMachines/infra/: settings.py  xsoar_api.py
Config/: core_packs_platform_list.json
Content-CI/scripts/: check_is_force_merge_allowed.py  trigger_content_build.py
Content-CI/tests/: verify_slack_notify_docker_image_test.py
Packs/AWS_ELB/: pack_metadata.json
Packs/Akamai_SIEM/: pack_metadata.json
Packs/ApacheTomcat/: pack_metadata.json
Packs/ApacheWebServer/: pack_metadata.json
Packs/AvayaAuraCommunicationManager/: pack_metadata.json
Packs/AzureKubernetesServices/: pack_metadata.json
Packs/BarracudaEmailProtection/: pack_metadata.json
Packs/BarracudaWAF/: pack_metadata.json
Packs/Barracuda_Cloudgen_Firewall/: pack_metadata.json
Packs/BitwardenPasswordManager/: pack_metadata.json
Packs/CiscoISR/: pack_metadata.json
Packs/CiscoNexus/: pack_metadata.json
Packs/CortexCloud/: pack_metadata.json
Packs/CortexCloudSec/: pack_metadata.json
Packs/CyberArkEPV/: pack_metadata.json
Packs/CyberArk_Privileged_Threat_Analytics/: pack_metadata.json
Packs/CyrenInboxSecurity/: pack_metadata.json
Packs/Darktrace/: pack_metadata.json
Packs/DellEMCUnity/: pack_metadata.json
Packs/Dragos_Platform/: pack_metadata.json
Packs/F5APM/: pack_metadata.json
Packs/F5ASM/: pack_metadata.json
Packs/F5BigIPAWAF/: pack_metadata.json
Packs/ForcepointSWG/: pack_metadata.json
Packs/GroupIB_ThreatIntelligenceAttribution/: .pack-ignore
Packs/HPESwitch/: pack_metadata.json
Packs/IBMGuardium/: pack_metadata.json
Packs/ImpossibleTraveler/: README.md
Packs/IronPort/: pack_metadata.json
Packs/IvantiPulseSecureVTM/: pack_metadata.json
Packs/JamfProtect/: pack_metadata.json
Packs/Kiteworks/: pack_metadata.json
Packs/MajorBreachesInvestigationandResponse/: README.md
Packs/ManageEngine-ADAudit/: pack_metadata.json
SecretActions/: add_build_machine.py  add_gsm_secret.py  change_secret_expiration.py  google_secret_manager_handler.py  requirements.txt
SlackNotifier/: gitlab_basic_slack_notifier.py  gitlab_slack_notifier.py  requirements.txt
Tests/: conf.json  configure_and_test_integration_instances.py  known_words.txt  test_content.py  test_dependencies.py  test_integration.py  tools.py  update_content_data.py
Utils/: _script_docker_python_loop_example.py  add_playbook_descriptions.py  check_protected_directories.py  comment_on_pr.py  comment_validate_summary_on_pr.py  content_release_vars.sh  delete_mismatched_branches.py  merge_content_new_zip.py  old_content_branch.py  packwise.py  release_notes_generator.py  request_contributor_review.py  should_trigger_test_upload.sh  start_stop_mechanism.py  start_stop_mechanism_test.py  trigger_content_build_with_time_to_live.sh  trigger_content_nightly_build_with_memory.sh  trigger_content_nightly_instance_tests.sh  trigger_content_non_ami_build.sh  trigger_content_non_ami_build_by_number.sh  trigger_contribution_build.py  trigger_nightly_sdk_build.sh  trigger_packwise.py  trigger_test_upload_flow.sh  update_branch_from_version.py  update_contribution_pack_in_base_branch.py  update_playbook.py  upload_code_coverage_report.py
Utils/xlogs/: README.md  pyproject.toml
Utils/xlogs/xlogs/: main.py
Utils/xlogs/xlogs/commands/: common.py
Utils/xlogs/xlogs/commands/bundle/: bundle.py  download.py  extract.py  integration_instances_json.py
Utils/xlogs/xlogs/commands/permissions/: ask_permissions.py
gcp/: Pipfile  create_instance.py  delete_old_images.py  gcp.py  instancesconfig.json
gcp_automations/: clean_remote_machine.sh  view_xsiam_logs.sh
rit_automations/: generate_recordings.py  gitlab_generate_tag.py  gitlab_generate_tag_test.py  rit_executor.py  rit_executor_test.py  update_publish_logs.py  update_publish_logs_test.py
server-image-build/: Dockerfile  ansible.cfg  run.sh
(+1516 files in other folders)
