[tool.poetry]
name = "infra"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.22.0"
gitpython = "^3.1.43"
python-gitlab = "^3.0.0"
ruamel-yaml = ">=0.17.21,<0.18.0"
demisto-sdk = "1.30.0"
coloredlogs = "^15.0.1"
pre-commit = "^3.7.0"
mock-open = "^1.4.0"
pandas = "^2.2.2"
google = "^3.0.0"
google-cloud-bigquery = "^3.22.0"
pytest-mock = "^3.14.0"
jira = "^3.8.0"
timeout-decorator = "^0.5.0"
requests-mock = "^1.12.1"
github = "^1.2.7"
typer = "^0.9.0"
jinja2 = "^3.1.3"
pendulum = "^2.1.2"
google-cloud-compute = "^1.8.0"
google-api-python-client = "^2.64.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.3"
google-cloud-firestore = "^2.3.4"
google-cloud-logging = "^3.1.2"
google-cloud-pubsub = "^2.18.3"
google-cloud-secret-manager = "^2.11.1"
google-cloud-storage = "^2.9.0"
retry = "^0.9.2"
Faker = "^15.3.4"

[tool.ruff]
ignore = [
    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage
]
line-length = 130

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
